<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1600dp"
    android:background="#000000"
    app:srcCompat="@drawable/background1"
    tools:context=".MyMenu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-750dp"
            app:srcCompat="@drawable/background1" />
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/calculator"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/calculator"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:drawableStart="@drawable/texttospeech"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/text_to_speech"
            android:textColor="#006064"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="160dp"
            android:drawableStart="@drawable/wifi"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/wifi_app"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="235dp"
            android:drawableStart="@drawable/bluetooth"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/bluetooth_app"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="310dp"
            android:drawableStart="@drawable/speaker"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/media_player"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="385dp"
            android:drawableStart="@drawable/lantern"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/torch_app"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="460dp"
            android:drawableStart="@drawable/microchip"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/sensor_based_app"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="535dp"
            android:drawableStart="@drawable/camera"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/camera_based_app"
            android:textColor="#006064"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="610dp"
            android:drawableStart="@drawable/web"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/web_browser"
            android:textColor="#006064"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="685dp"
            android:drawableStart="@drawable/quiz"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/quiz_app"
            android:textColor="#006064"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-102dp"
            app:srcCompat="@drawable/background1" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="760dp"
            android:drawableStart="@drawable/server"
            android:fontFamily="@font/alegreya_sc"
            android:text="Database update"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonP"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button17"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/previuos"
            android:textColor="#006064"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonN"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button17"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/next"
            android:textColor="#006064"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>