<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191f26"
    tools:context=".bluetooth_app">
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/btwall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/bluetooth_appin"
        android:textAlignment="center"
        android:textColor="#fd4985"
        android:textSize="24sp" />


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/alegreya_sc"
        android:textAlignment="center"
        android:textColor="#006064"
        android:textOff="@string/bluetooth_off"
        android:textOn="@string/bluetooth_on"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button23"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/back1"
        android:textColor="#006064" />



</RelativeLayout>